public class EnemyAnimatorConstants // All the Enemy State names in the Animator component
{
    public const string IDLE = "Idle";
    public const string LIGHT_ATTACK = "LightAttack";
    public const string HEAVY_ATTACK = "HeavyAttack";
    public const string DIE = "Die";
    public const string PATROL = "Patrol";
    public const string CHASE = "Chase";
    public const string LIGHT_ATTACK_HIT_REACTION = "LightAttackStun";
    public const string HEAVY_ATTACK_HIT_REACTION = "HeavyAttackStun";
    public const string KNOCKBACK = "KnockingBack";
    public const string RETREAT = "Retreat";
}
